--- a/index.html
+++ b/index.html
@@ -28,7 +28,42 @@
         <img src="./assets/logoimagen.svg" alt="Element Logo">
       </article>
     </section>
-    <section class="page" id="nosotros"></section>
+    <section class="page" id="nosotros">
+      <article>
+        <h2>Quienes somos</h2>
+        <h3>Somos una agencia multimedial especializada en 
+          <span class="words">animación</span>
+          <span class="words">diseño gráfico</span>
+          <span class="words">programación</span>
+          <span class="words">3D</span>
+        </h3>
+        <p>
+          Brindamos estrategias para posicionar productos y servicios dentro de diferente canales digitales.
+        </p>
+        <p>
+          Ideamos soluciones a las medida para cada uno de nuestros clientes para aumentar su productividad y acompañar su crecimiento.
+        </p>
+      </article>
+    </section>
+    <section class="page" id="reel"></section>
+    <section class="page" id="integrantes">
+      <article class="card">
+        <div class="front"></div>
+        <div class="back"></div>
+      </article>
+      <article class="card">
+        <div class="front"></div>
+        <div class="back"></div>
+      </article>
+      <article class="card">
+        <div class="front"></div>
+        <div class="back"></div>
+      </article>
+      <article class="card">
+        <div class="front"></div>
+        <div class="back"></div>
+      </article>
+    </section>
     <section class="page" id="trabajos"></section>
     <section class="page" id="contacto"></section>
   </main>
