--- a/index.html
+++ b/index.html
@@ -43,9 +43,25 @@
         <p>
           Ideamos soluciones a las medida para cada uno de nuestros clientes para aumentar su productividad y acompañar su crecimiento.
         </p>
+        <nav class="navigation">
+          <button data-page="manifiest">Conocenos más <i class="fas fa-2x fa-play"></i></button>
+          <button data-page="integrantes">El Equipo <i class="fas fa-2x fa-users"></i></button>
+        </nav>
+        <button></button>
       </article>
     </section>
-    <section class="page" id="reel"></section>
+    <section class="page" id="manifiest">
+      <div class="controls">
+        <button id="btnPlay"><i class="fas fa-2x fa-play"></i></button>
+        <button id="btnPause"><i class="fas fa-2x fa-pause"></i></button>
+        <button id="btnStop"><i class="fas fa-2x fa-stop"></i></button>
+        <button id="btnMute"><i class="fas fa-2x fa-minus"></i></button>
+        <button id="btnUp"><i class="fas fa-2x fa-plus"></i></button>
+      </div>
+      <article>
+        <video src="./assets/manifesto.mp4" id="mafiesto"></video>
+      </article>
+    </section>
     <section class="page" id="integrantes">
       <article class="card">
         <div class="front"></div>
