Team In Progress

--- a/index.html
+++ b/index.html
@@ -63,22 +63,17 @@
       </article>
     </section>
     <section class="page" id="integrantes">
-      <article class="card">
-        <div class="front"></div>
-        <div class="back"></div>
-      </article>
-      <article class="card">
-        <div class="front"></div>
-        <div class="back"></div>
-      </article>
-      <article class="card">
-        <div class="front"></div>
-        <div class="back"></div>
-      </article>
-      <article class="card">
-        <div class="front"></div>
-        <div class="back"></div>
-      </article>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="/assets/iconos/agua.svg" alt="Avatar" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Carolina Herrera</h1>
+            <p>Diseñadora gráfica e Ilustradora</p>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="page" id="trabajos"></section>
     <section class="page" id="contacto"></section>
