Proyect In Progress

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/assets/iconos/agua.svg" alt="Avatar" style="width:300px;height:300px;">
+            <img src="./assets/iconos/agua.svg" alt="Avatar" style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
             <h1>Carolina Herrera</h1>
@@ -64,7 +64,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/assets/iconos/fuego.svg" alt="Avatar" style="width:300px;height:300px;">
+            <img src="./assets/iconos/fuego.svg" alt="Avatar" style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
             <h1>Mauricio Mérida</h1>
@@ -75,7 +75,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/assets/iconos/tierra.svg" alt="Avatar" style="width:300px;height:300px;">
+            <img src="./assets/iconos/tierra.svg" alt="Avatar" style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
             <h1>Tatiana Schiavonne</h1>
@@ -86,7 +86,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/assets/iconos/viento.svg" alt="Avatar" style="width:300px;height:300px;">
+            <img src="./assets/iconos/viento.svg" alt="Avatar" style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
             <h1>Eduardo Virgilio</h1>
@@ -112,15 +112,15 @@
         <h2>Trabajos</h2>
         <h3>Producción Audiovisual</h3>
         <ul class="icon-list">
-          <li data-element="water" class="icon-item active"><img src="/assets/iconos/agua.svg" alt=""></li>
-          <li data-element="fire" class="icon-item"><img src="/assets/iconos/fuego.svg" alt=""></li>
-          <li data-element="earth" class="icon-item"><img src="/assets/iconos/tierra.svg" alt=""></li>
-          <li data-element="air" class="icon-item"><img src="/assets/iconos/viento.svg" alt=""></li>
+          <li data-element="water" class="icon-item active"><img src="./assets/iconos/agua.svg" alt=""></li>
+          <li data-element="fire" class="icon-item"><img src="./assets/iconos/fuego.svg" alt=""></li>
+          <li data-element="earth" class="icon-item"><img src="./assets/iconos/tierra.svg" alt=""></li>
+          <li data-element="air" class="icon-item"><img src="./assets/iconos/viento.svg" alt=""></li>
         </ul>
         <section id="porfolio">
 
           <section id="animal">
-            <figure id="loader"><img src="/assets/Animals/Gato/Gato-1.png" alt=""></figure>
+            <figure id="loader"><img src="./assets/Animals/Gato/Gato-1.png" alt=""></figure>
             <div id="renders"></div>
           </section>
         
